--- a/style.css
+++ b/style.css
@@ -113,11 +113,23 @@ li:hover a{
 
 
 .main-img{
-    width: 100%;
+    width: calc(100% - 6px);
+    border: 3px solid #6b6b6b;
+    border-radius: 5px;
 }
 
 figure{
     margin: 16px 0px;
+    position: relative;
+}
+
+.watermark{
+    width: 20%;
+    position: absolute;
+    object-fit: cover;
+    left: 5%;
+    top:10% ;
+    opacity: 0.5;
 }
 
 .line{
@@ -132,8 +144,9 @@ figure{
 }
 
 .shoes-container{
-    display: flex;
+    font-size: 15px;
     gap: 10px;
+    display: flex;
     flex-wrap: wrap;
     overflow:hidden;
     justify-content: center;
@@ -148,12 +161,16 @@ figure{
     flex: 0 1 150px;
     padding: 10px;
     height: 200px;
-    transition: 0.9s;
+    transition: 0.3s;
+}
+
+.shoes-card{
+    position: relative;
+
 }
 
 .shoes-container .shoes-card:hover {
-    background-image: url('./image/line.jpeg'); /* Replace 'your-image.jpg' with the URL of your image */
-    background-repeat: repeat; /* Repeat the image horizontally and vertically */
+    background-color: #363636;
     background-size: 60px; /* Keep the original image size */
     color: #ececec;
 }
@@ -165,8 +182,9 @@ figure{
 
 
 
-.shoes-container img{
+.shoes-container .shoes-img{
     border-bottom: 3px solid black;
+    position: relative;
     width: 100%;
     height: 80%;
     object-fit: contain;
