--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ figure{
     flex-wrap: wrap;
     overflow:hidden;
     justify-content: space-evenly;
+    align-content:space-evenly;
     
 }
 
@@ -195,10 +196,22 @@ figure{
     border-bottom: 3px solid #ececec;
 }
 
+.container-text{
+    padding: 5px;
+    margin: 2px;
+}
+
+.container-text .col{
+    border: 1px solid #363636;
+}
+
 @media screen and (min-width: 769px) {
     body{
         font-size: 13px;
         margin: 0;
+    }
+    a{
+        font-size: 15px;
     }
     
     article{
@@ -209,10 +222,7 @@ figure{
         border-radius: 30px;
         flex: 0 1 250px;
         padding: 10px;
-        height: 200px;
+        height: 250px;
         transition: 0.3s;
     }
-
-
-
   }
