--- a/style.css
+++ b/style.css
@@ -28,8 +28,13 @@ header{
     color: #ececec;
     padding: 5px 5px;
 }
+footer , a{
+    background-color: #040404;
+    color: #ececec;
+    padding: 5px 5px;
+}
 
-header h1{
+h1{
     color: #E5F33C;
     font-size: 35px;
     font-weight:800;
@@ -213,7 +218,10 @@ figure{
     a{
         font-size: 15px;
     }
-    
+    h1{
+        font-size: 50px;
+        padding-top: 20px;
+    }
     article{
         padding:3px 7px;
     }
