--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header{
     color: #ececec;
     padding: 5px 5px;
 }
-footer , a{
+footer , footer a{
     background-color: #040404;
     color: #ececec;
     padding: 5px 5px;
